--- a/experiencia.html
+++ b/experiencia.html
@@ -22,5 +22,53 @@
             <a href="competencias.html">Competencias</a>
         </div>
     </nav>
+
+    <div class="experiencia">
+        <table>
+            <tr class="first-line">
+                <th><a href="#2019">2019</a></th>
+                <td>Prácticas Ciclo Medio Mecanizado</td>
+                <td>Gómez y Crespo S.L.</td>
+            </tr>
+            <tr class="second-line">
+                <th><a href="#2022">2022</a></th>
+                <td>Operador de cortadora láser</td>
+                <td>Aníbal Metalmecánica Gallega</td>
+            </tr>
+            <tr class="third-line">
+                <th><a href="#2023">2023</a></th>
+                <td>Limpiador Industrial</td>
+                <td>Limpiezas Salgado</td>
+            </tr>
+            <tr class="fourth-line">
+                <th><a href="#2023">2023</a></th>
+                <td>Técnico de mantenimiento</td>
+                <td>Logirail SME SA</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="descripcion_exp">
+        <div class="desc_2019">
+            <h2 id="2019">2019</h2>
+            <h4>Prácticas Ciclo Medio de Mecanizado | Gómez y Crespo S.L.</h4>
+            <p>Durante las prácticas en Gómez y Crespo, que duraron de marzo a junio, estuve trabajando en varios puestos.<br> Desde sacar piezas de la extrusora de plástico, a montaje en cadena de producción de piezas plásticas, a montaje de jaulas o fabricación de muelles.</p><br>
+        </div>
+
+        <div class="desc_2022">
+            <h2 id="2022">2022</h2>
+            <h4>Operador de cortadora láser | Aníbal Metalmecánica Gallega</h4>
+            <p>En esta empresa, en la que estuve desde principios de enero hasta septiembre, trabajé como operario de una CNC láser, que es la primera fase de la línea de producción.<br> En esta máquina me encargaba de alimentarla de materia prima, en este caso barras de metal de grandes proporciones, introducir los parámetros de la máquina, hacer el control inicial de calidad de las primeras piezas, además del control de calidad regualr cada 20 minutos, el embalaje de las piezas y su introdcción en la base de datos interna de la empresa.</p><br>
+        </div>
+
+        <div class="desc_2023">
+            <h2 id="2023">2023</h2>
+            <h4>Limpiador Industrial | Limpiezas Salgado</h4>
+            <p>Enn esta empresa estuve trabajando solo una semana, al llegar de pasar un año viviendo fuera. El trabajo era de obra, el objetivo era hacer la limpieza anual reglada de Finsa Orember, en el polígono industrial de San Cibrao das Viñas.</p><br><br><br> 
+            <h4>Técnico de mantenimiento | Logirail SME SA</h4>
+            <p>Desde inicios de septiembre hasta finales de octubre trabajé en Logirail como técnico de mantenimiento a borde de los Trenes Turísticos de Lujo de Renfe. Los viajes eran de entre 12 y 15 días de duración, ya que hacía el trayecto de ida y el de vuelta del tren. Durante los viajes, tanto yo como mis 2 compañeros eramos responsables del correcto funcionamiento de todas las áreas del tren, tanto las habitaciones de los pasajeros, que debian estar impecables en todo momento, como de las zonas comunes, la cocina del tren o la sala de máquinas.</p>
+        </div>
+    </div>
+
 </body>
 </html>
