Actualizar experiencia.html

--- a/experiencia.html
+++ b/experiencia.html
@@ -64,7 +64,7 @@
         <div class="desc_2023">
             <h2 id="2023">2023</h2>
             <h4>Limpiador Industrial | Limpiezas Salgado</h4>
-            <p>Enn esta empresa estuve trabajando solo una semana, al llegar de pasar un año viviendo fuera. El trabajo era de obra, el objetivo era hacer la limpieza anual reglada de Finsa Orember, en el polígono industrial de San Cibrao das Viñas.</p><br><br><br> 
+            <p>En esta empresa estuve trabajando solo una semana, al llegar de pasar un año viviendo fuera. El trabajo era de obra, el objetivo era hacer la limpieza anual reglada de Finsa Orember, en el polígono industrial de San Cibrao das Viñas.</p><br><br><br> 
             <h4>Técnico de mantenimiento | Logirail SME SA</h4>
             <p>Desde inicios de septiembre hasta finales de octubre trabajé en Logirail como técnico de mantenimiento a borde de los Trenes Turísticos de Lujo de Renfe. Los viajes eran de entre 12 y 15 días de duración, ya que hacía el trayecto de ida y el de vuelta del tren. Durante los viajes, tanto yo como mis 2 compañeros eramos responsables del correcto funcionamiento de todas las áreas del tren, tanto las habitaciones de los pasajeros, que debian estar impecables en todo momento, como de las zonas comunes, la cocina del tren o la sala de máquinas.</p>
         </div>
