--- a/f_academica.html
+++ b/f_academica.html
@@ -22,5 +22,54 @@
             <a href="competencias.html">Competencias</a>
         </div>
     </nav>
+
+    <div class="formacion">
+        <table>
+            <tr class="first-line">
+                <th><a href="#2019">2017-2019</a></th>
+                <td>Ciclo Medio de Mecanizado</td>
+                <td>IES 12 de Octubre</td>
+            </tr>
+            <tr class="second-line">
+                <th><a href="#2022">2019-2022</a></th>
+                <td>Ciclo Superior Robótica</td>
+                <td>CIFP A Farixa</td>
+            </tr>
+            <tr class="third-line">
+                <th><a href="#2022">2022</a></th>
+                <td>Programación en Java</td>
+                <td>Open Bootcamp</td>
+            </tr>
+            <tr class="fourth-line">
+                <th><a href="#2023">2023</a></th>
+                <td>Aspectos Básciso de la Asistencia Técnica</td>
+                <td>Beca Google | Coursera</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="descripcion_exp">
+        <div class="desc_2019">
+            <h2 id="2019">2019</h2>
+            <h4></h4>
+            <p></p><br>
+        </div>
+
+        <div class="desc_2022">
+            <h2 id="2022">2022</h2>
+            <h4></h4>
+            <p></p><br>
+        </div>
+
+        <div class="desc_2023">
+            <h2 id="2023">2023</h2>
+            <h4></h4>
+            <p></p>
+            <br><br><br> 
+            <h4></h4>
+            <p></p>
+        </div>
+    </div>
+
 </body>
 </html>
