Añadido el styles.css

--- a/f_academica.html
+++ b/f_academica.html
@@ -30,20 +30,10 @@
                 <td>Ciclo Medio de Mecanizado</td>
                 <td>IES 12 de Octubre</td>
             </tr>
-            <tr class="second-line">
+            <tr class="fourth-line">
                 <th><a href="#2022">2019-2022</a></th>
                 <td>Ciclo Superior Robótica</td>
                 <td>CIFP A Farixa</td>
-            </tr>
-            <tr class="third-line">
-                <th><a href="#2022">2022</a></th>
-                <td>Programación en Java</td>
-                <td>Open Bootcamp</td>
-            </tr>
-            <tr class="fourth-line">
-                <th><a href="#2023">2023</a></th>
-                <td>Aspectos Básciso de la Asistencia Técnica</td>
-                <td>Beca Google | Coursera</td>
             </tr>
         </table>
     </div>
@@ -51,25 +41,17 @@
     <div class="descripcion_exp">
         <div class="desc_2019">
             <h2 id="2019">2019</h2>
-            <h4></h4>
-            <p></p><br>
+            <h4>Ciclo Medio de Mecanizado</h4>
+            <p>Aprendizaje del uso de torno y fresa, tanto manual como CNC. Conocimiento de medidas y sus respectivos utensilios de medida. Diseño e interpretación de planos y sus reglas.</p>
+            <br>
         </div>
 
         <div class="desc_2022">
             <h2 id="2022">2022</h2>
-            <h4></h4>
-            <p></p><br>
-        </div>
-
-        <div class="desc_2023">
-            <h2 id="2023">2023</h2>
-            <h4></h4>
-            <p></p>
-            <br><br><br> 
-            <h4></h4>
-            <p></p>
+            <h4>Ciclo Superior de Automatización y Robótica Industrial</h4>
+            <p>Aprendizaje del uso de PLCs y brazos robóticos. Diseño de circuitos electricos, lineas de automatización y programación de los mismos.</p>
+            <br>
         </div>
     </div>
-
 </body>
 </html>
