--- a/f_complementaria.html
+++ b/f_complementaria.html
@@ -22,5 +22,36 @@
             <a href="competencias.html">Competencias</a>
         </div>
     </nav>
+
+    <div class="complementaria">
+        <table>
+            <tr class="first-line">
+                <th><a href="#2022">2022</a></th>
+                <td>Programación en Java</td>
+                <td>Open Bootcamp</td>
+            </tr>
+            <tr class="fourth-line">
+                <th><a href="#2023">2023</a></th>
+                <td>Aspectos Básicos de la Asistencia Técnica</td>
+                <td>Beca Google | Coursera</td>
+            </tr>
+        </table>
+    </div>
+
+    <div class="descripcion_exp">
+        <div class="desc_2022">
+            <h2 id="2022">2022</h2>
+            <h4>Programación en Java</h4>
+            <p>Conocimientos básicos de programación en Java, programación orientada a objetos, etc...</p>
+            <br>
+        </div>
+
+        <div class="desc_2023">
+            <h2 id="2023">2023</h2>
+            <h4>Aspectos Básicos de la Asistencia Técnica</h4>
+            <p>Curso becado por Google en el que enseñan la Asistencia Técnica en sistemas, para trabajar en la industria IT</p>
+            <br>
+        </div>
+    </div>
 </body>
 </html>
