--- a/perfil.html
+++ b/perfil.html
@@ -23,6 +23,16 @@
         </div>
     </nav>
 
-    
+    <div class="perfil_profesional">
+        <h2>Diseñador 3D</h2>
+    <h3>Especializado en diseños orientados a impresión 3D</h3>
+    <h4>2019-actualidad (5 años)</h4>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quas voluptatem iste in laboriosam dignissimos reiciendis corrupti aspernatur, inventore reprehenderit iure vero pariatur tenetur voluptate nihil rem minima dolores earum! <br>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor ducimus temporibus corporis consequatur molestias dolores autem, ratione nobis soluta eius culpa labore nam vel nesciunt ea, esse dignissimos? Harum, cumque! <br>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic explicabo a ipsa numquam aperiam voluptatibus, iure, culpa sint deleniti neque reprehenderit saepe ab quisquam perspiciatis consectetur sequi! Reiciendis, quaerat officia. <br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi repellendus nesciunt perspiciatis ea dolore expedita molestiae natus atque rerum voluptas. Facilis magni voluptate, hic ea error cumque eos explicabo sit.
+    </p>
+    </div>
 </body>
 </html>
