--- a/experiencia.html
+++ b/experiencia.html
@@ -23,6 +23,7 @@
         </div>
     </nav>
 
+    <!--Div contenedor de la tabla con las experiencias laborales-->
     <div class="experiencia">
         <table>
             <tr class="first-line">
@@ -48,6 +49,7 @@
         </table>
     </div>
 
+    <!--Div contenedor para los divs de cada una de las descripciones de las experiencias laborales, para permitir la animación de cada una por separado-->
     <div class="descripcion_exp">
         <div class="desc_2019">
             <h2 id="2019">2019</h2>
