--- a/f_academica.html
+++ b/f_academica.html
@@ -23,6 +23,7 @@
         </div>
     </nav>
 
+    <!--Div contenedor de la tabla de formación académica reglada-->
     <div class="formacion">
         <table>
             <tr class="first-line">
@@ -38,6 +39,7 @@
         </table>
     </div>
 
+    <!--Div contenedor de los divs con las diferentes formaciones académicas, para permitir su animación individual-->
     <div class="descripcion_exp">
         <div class="desc_2019">
             <h2 id="2019">2019</h2>
