--- a/f_complementaria.html
+++ b/f_complementaria.html
@@ -23,6 +23,7 @@
         </div>
     </nav>
 
+    <!--Div contenedor de la tabla de formación académica no reglada-->
     <div class="complementaria">
         <table>
             <tr class="first-line">
@@ -38,6 +39,7 @@
         </table>
     </div>
 
+    <!--Div contenedor de los divs con las diferentes formaciones complementarias, para permitir su animación individual-->
     <div class="descripcion_exp">
         <div class="desc_2022">
             <h2 id="2022">2022</h2>
