--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/af3d4ac3e6.js" crossorigin="anonymous"></script>
     <title>Gabriel Andreu Pizarro</title>
 </head>
@@ -23,6 +26,8 @@
         </div>
     </nav>
     <br>
+
+    <!--Div contenedor de la foto y del nombre-->
     <div class="primera-linea">
         <div class="div_foto">
             <img src="imagenes/fotocv.jpg" alt="fotocv" title="Foto CV" class="fotocv" width="300">
@@ -32,8 +37,11 @@
             <h3><i>Diseñador 3D</i></h3>
         </div>
     </div>
+
+    <!--Div contenedor de los datos de contacto y de la descripción-->
+    <!--Hago uso de una fuente externa para añadir iconos a los datos de contacto, importada en <head>-->
     <div class="segunda-linea">
-        <div class="columna_izq">
+        <div class="div_contacto">
             <p><i class="fas fa-house"></i><b> Rúa Ricardo Coutier, 11</b></p>
             <p><i class="fas fa-phone"></i><b> +34 611454630</b></p>
             <p><i class="fas fa-envelope"></i><a href="mailto:2fpgabrielandreu@gmail.com" target="_blank"><b> 2fpgabrielandreu@gmail.com</b></a></p>
@@ -43,10 +51,11 @@
         </div>
         <div class="columna_der">
             <p> Hola! Soy Gabriel</p>
-            <p>Soy un joven muy curioso, me encanta cacharrear con ordenadores y cualquier cosa que lleve electrónica. Actualmente estoy cursando Desarrollo de aplicaciones con tecnologías web en la Academia Postal, aparte de continuar con mis proyectos personales, tanto en diseño 3D, programación, etc.</p>
+            <p>Soy un joven muy curioso, <br> me encanta cacharrear con ordenadores <br> y cualquier cosa que lleve electrónica. <br> Actualmente estoy cursando <br> Desarrollo de aplicaciones con tecnologías web <br> en la Academia Postal, aparte de continuar con <br> mis proyectos personales, <br> tanto en diseño 3D, programación, etc.</p>
         </div>
     </div>
 
+    <!--Boton de enviar correo en el footer-->
     <footer><a href="mailto:2fpgabrielandreu@gmail.com">Enviar mail</a></footer>
 </body>
 </html>
