--- a/perfil.html
+++ b/perfil.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/af3d4ac3e6.js" crossorigin="anonymous"></script>
     <title>Gabriel Andreu Pizarro | Perfil Profesional</title>
 </head>
@@ -22,12 +25,13 @@
             <a href="competencias.html">Competencias</a>
         </div>
     </nav>
-
+    <!--Div contenedor de la descripcion del perfil profesional-->
     <div class="perfil_profesional">
         <h2>Diseñador 3D</h2>
     <h3>Especializado en diseños orientados a impresión 3D</h3>
     <h4>2019-actualidad (5 años)</h4>
 
+    <!--Lorem ipsum porque no sé qué poner aquí :D -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quas voluptatem iste in laboriosam dignissimos reiciendis corrupti aspernatur, inventore reprehenderit iure vero pariatur tenetur voluptate nihil rem minima dolores earum! <br>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor ducimus temporibus corporis consequatur molestias dolores autem, ratione nobis soluta eius culpa labore nam vel nesciunt ea, esse dignissimos? Harum, cumque! <br>
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic explicabo a ipsa numquam aperiam voluptatibus, iure, culpa sint deleniti neque reprehenderit saepe ab quisquam perspiciatis consectetur sequi! Reiciendis, quaerat officia. <br>
