updated experiencia laboral

--- a/experiencia.html
+++ b/experiencia.html
@@ -47,7 +47,17 @@
                 <td>Logirail SME SA</td>
             </tr>
         </table>
+
+        <img src="imagenes/empresas.jpg" alt="Empresas" title="Empresas" usemap="#image-map" class="empresas">
     </div>
+    
+
+    <map name="image-map">
+        <area target="_blank" alt="Gomez y Crespo" title="Gomez y Crespo" href="https://www.gomezycrespo.com" coords="1,18,298,57" shape="rect">
+        <area target="_blank" alt="AMG" title="AMG" href="https://www.amgmetalmecanica.com" coords="40,121,50" shape="circle">
+        <area target="_blank" alt="Limpiezas Salgados" title="Limpiezas Salgados" href="https://www.salgadoslimpiezas.es" coords="232,149,234,135,221,121,231,110,232,92,247,94,258,82,270,95,284,93,289,113,299,122,285,135,286,150,271,144,260,158,247,147" shape="poly">
+        <area target="_blank" alt="Logirail" title="Logirail" href="https://www.logirail.com" coords="0,189,299,289" shape="rect">
+    </map>
 
     <!--Div contenedor para los divs de cada una de las descripciones de las experiencias laborales, para permitir la animación de cada una por separado-->
     <div class="descripcion_exp">
