--- a/competencias.html
+++ b/competencias.html
@@ -22,5 +22,7 @@
             <a href="#inicio" class="active">Competencias</a>
         </div>
     </nav>
+
+    <img src="" alt="">
 </body>
 </html>
