--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <p><i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/gabriel-andreu-pizarro" target="_blank"><b> Gabriel Andreu Pizarro</a></p>
             <p><i class="fa-brands fa-twitter"></i><a href="https://www.x.com/Rokuro_17"><b> @Rokuro_17</b></a></p>
             <p><i class="fa-brands fa-instagram"></i><a href="https://www.instagram.com/rokuro_17_"><b> @rokuro_17_</b></a></p>
+            <p><i class="fa-brands fa-github"></i><a href="https://github.com/rokuro17"> rokuro17</a></p>
         </div>
         <div class="columna_der">
             <p> Hola! Soy Gabriel</p>
