updated css and competencias

--- a/competencias.html
+++ b/competencias.html
@@ -23,6 +23,31 @@
         </div>
     </nav>
 
-    <img src="" alt="">
+    <div class="competencias-y-habilidades">
+        <div class="competencias">    
+            <ul>
+                <li>Python</li>
+                <li>Java</li>
+                <li>C#</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Blender</li>
+                <li>AutoCAD</li>
+                <li>Fusion360</li>
+            </ul>
+        </div>
+        <div class="habilidades">
+            <ul>
+                <li></li>
+                <li>Gestion Operativa</li>
+                <li></li>
+                <li>Trabajo en equipo</li>
+                <li></li>
+                <li>Capacidad de análisis</li>
+                <li></li>
+                <li>Atención al detalle</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
