--- a/experiencia.html
+++ b/experiencia.html
@@ -82,5 +82,9 @@
         </div>
     </div>
 
+    <div class="to-top">
+        <h3><a href="#inicio"><i class="fas fa-arrow-up"></i></a></h3>
+    </div>
+
 </body>
 </html>
