--- a/experiencia.html
+++ b/experiencia.html
@@ -80,10 +80,11 @@
             <h4>Técnico de mantenimiento | Logirail SME SA</h4>
             <p>Desde inicios de septiembre hasta finales de octubre trabajé en Logirail como técnico de mantenimiento a borde de los Trenes Turísticos de Lujo de Renfe. Los viajes eran de entre 12 y 15 días de duración, ya que hacía el trayecto de ida y el de vuelta del tren. Durante los viajes, tanto yo como mis 2 compañeros eramos responsables del correcto funcionamiento de todas las áreas del tren, tanto las habitaciones de los pasajeros, que debian estar impecables en todo momento, como de las zonas comunes, la cocina del tren o la sala de máquinas.</p>
         </div>
+        <br><br><br>
     </div>
 
     <div class="to-top">
-        <h3><a href="#inicio"><i class="fas fa-arrow-up"></i></a></h3>
+        <h3><a href="#inicio"><i class="fas fa-arrow-up"></i> <br> Inicio</a></h3>
     </div>
 
 </body>
